# api-drive

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  lib.rs  main.rs  swagger_config.rs
src/api/: auth.rs  google_drive.rs  mod.rs
src/handlers/: auth_handler.rs  google_drive_handler.rs  mod.rs
src/middlewares/: auth_guard.rs
src/routes/: auth_routes.rs  drive_routes.rs  mod.rs
src/services/: auth_service.rs  google_drive_service.rs  mod.rs
tests/: auth_service.rs  drive_routes.rs
tests/mocks/: auth_service_mock.rs  config_mock.rs  google_drive_service_mock.rs
