[package]
name = "api_drive"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
actix-cors = "0.6"     
google-drive3 = "2.0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json","multipart"] }
actix-multipart = "0.4"
futures = "0.3"

